fixed footer module and adjusted skills alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -47,7 +47,7 @@ body {
 
 // #landing-page-hero,
 section {
-  width: 100vw;
+  // width: 100vw;
   margin-bottom: 2rem;
 }
 a {
@@ -950,60 +950,60 @@ transform: matrix3d(0.77,0,0.64,.001,0.00,1,0.00,0,-0.64,0,0.77,0,0,0,0,1);
 //   align-items: center;
 // }
 
-#footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 7rem 2rem 2rem;
-  font-weight: lighter;
-  gap: 2rem;
+// #footer {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   margin: 7rem 2rem 2rem;
+//   font-weight: lighter;
+//   gap: 2rem;
 
-  & a , h2 {
-    font-family: 'Rajdhani', sans-serif;
-    text-shadow: var(--text-shadow-pink);
-  }
-  img {
-    margin-right: 1rem;
-  }
-  & .contact-wrapper  {
-    display: inherit;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+//   & a , h2 {
+//     font-family: 'Rajdhani', sans-serif;
+//     text-shadow: var(--text-shadow-pink);
+//   }
+//   img {
+//     margin-right: 1rem;
+//   }
+//   & .contact-wrapper  {
+//     display: inherit;
+//     flex-direction: row;
+//     justify-content: space-between;
+//     align-items: center;
 
-  }
-}
-.icon-wrapper img {
-  width: 50%;
-  height: auto;
-}
-.contact-text {
-  text-align: right;
-  font-size: 1rem;
-  width: 60%;
-   .email {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-top: 1rem;
-    }
-   }
-   .email img {
-    width: 2rem;
-  }
+//   }
+// }
+// .icon-wrapper img {
+//   width: 50%;
+//   height: auto;
+// }
+// .contact-text {
+//   text-align: right;
+//   font-size: 1rem;
+//   width: 60%;
+//    .email {
+//     display: flex;
+//     justify-content: flex-end;
+//     align-items: center;
+//     margin-top: 1rem;
+//     }
+//    }
+//    .email img {
+//     width: 2rem;
+//   }
 
-.copyright-wrapper {
-  text-align: center;
-  font-size: smaller;
-  font-weight: 300;
-  font-family: 'Rajdhani', sans-serif;
-  letter-spacing: 0.2rem;
-  line-height: 150%;
-  &.copyright-wrapper span::before, &.copyright-wrapper span::after {
-    content: " : : "
-  }
-}
+// .copyright-wrapper {
+//   text-align: center;
+//   font-size: smaller;
+//   font-weight: 300;
+//   font-family: 'Rajdhani', sans-serif;
+//   letter-spacing: 0.2rem;
+//   line-height: 150%;
+//   &.copyright-wrapper span::before, &.copyright-wrapper span::after {
+//     content: " : : "
+//   }
+// }
 
 
 //----------------------------------------------- MOBILE -----------------------------------
@@ -1411,13 +1411,13 @@ letter-spacing: 0.2rem;
 //    max-width: 320px;
 //    height: auto;
 //  }
-  .contact-text {
-  font-size: 0.7rem;
-  .email {
-    margin-top: 0.2rem;
-  }
-  img {
-    display: none;
-  }
-}
+//   .contact-text {
+//   font-size: 0.7rem;
+//   .email {
+//     margin-top: 0.2rem;
+//   }
+//   img {
+//     display: none;
+//   }
+// }
 }
