--- a/src/styles/skills/skills.module.scss
+++ b/src/styles/skills/skills.module.scss
@@ -3,7 +3,6 @@
     justify-content: center;
     gap: 5rem;
     margin-top: 9rem;
-    
     }
     
     .skills-wrapper {
@@ -51,12 +50,23 @@
       flex-direction: column;
       align-items: center;
     }
+    @media only screen and (max-width: 1024px) {
+        .skills, .skills-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+           }
+           .skills {
+            margin-left: 2rem;
+            margin-right: 2rem;;
+           }
+    }
     @media only screen and (max-width: 800px) {
         .skills-wrapper {
             justify-content: center;
             align-items: center;
         
-          & .hard-skills-wrapper .skills-area{
+          & .hard-skills-wrapper .skills-area {
             gap: 1rem;
           }
             & .skills-area {
@@ -71,7 +81,7 @@
             height: auto;
           }
         .skills {
-           margin-left: unset;
+        //    margin-left: unset;
            margin-top: 5rem;
            display: flex;
            flex-direction: column;
